TWINS-815: some fixes 2